--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/font-awesome.min.css">
+    <link rel="stylesheet" href="/sealog/style/style.css">
   </head>
   <body>
     <div class="container"></div>
-    <script src="bundle.js"></script>
+    <script src="/sealog/bundle.js"></script>
   </body>
 </html>
